Fixed file hashing and message parsing